--- a/src/plugins/core/tangent/prefs/html/rows.html
+++ b/src/plugins/core/tangent/prefs/html/rows.html
@@ -9,8 +9,8 @@
 					<input type="text" id="tangent_button{{ i }}_action" class="tangentActionTextbox" value="{{ favourites[i] and favourites[i].actionTitle or none }}" disabled>
 				</td>
 				<td class="tangentRowActionButton">
-					<a id="tangent_button{{ i }}_actionButton" href="#" class="button sdActionButton">Select</a>
-					<a id="tangent_button{{ i }}_clearActionButton" href="#" class="button sdActionButton">Clear</a>
+					<a id="tangent_button{{ i }}_actionButton" href="#" class="button tangentActionButton">Select</a>
+					<a id="tangent_button{{ i }}_clearActionButton" href="#" class="button tangentActionButton">Clear</a>
 				</td>
 				<script>
 						/*
