--- a/src/plugins/core/preferences/panels/touchbar/html/controls.html
+++ b/src/plugins/core/preferences/panels/touchbar/html/controls.html
@@ -8,12 +8,27 @@
 					<th class="tbRowAction">{{ i18n("actionOrWidget") }}</th>
 					<th class="tbRowActionButton"></th>
 					<th class="tbRowLabel">{{ i18n("buttonLabel") }}</th>
+					<th class="tbRowOrder"></th>
 				</tr>
 			</thead>
 			<tbody>
 			{(html/rows.html, _.extend({groupID = groupID}, context))}
 			</tbody>
 		</table>
+		<script>
+			/*
+			--------------------------------------------------------------------------------
+			UP BUTTONS:
+			--------------------------------------------------------------------------------
+			*/
+			var upButtonArray = document.querySelectorAll('tbUpButton');
+			upButtonArray.forEach(function(elem) {
+				elem.addEventListener("click", function() {
+					var clickedItem = e.target.id;
+            		alert("Hello " + clickedItem);
+				});
+			});
+		</script>
 	</div>
 {% end %}
 </div>
