--- a/src/plugins/core/preferences/panels/touchbar/html/rows.html
+++ b/src/plugins/core/preferences/panels/touchbar/html/rows.html
@@ -11,8 +11,8 @@
 						end
 					%}
 
-					<div id="touchbar_{{ groupID }}_dropzone{{ i }}" class="dropzone{{ class }}">
-						<div id="touchbar_{{ groupID }}_dropzone{{ i }}_preview">
+					<div id="touchbar_{{ groupID }}_dropzone{{ i }}" class="dropzone{{ class }}" ondragover="this.classList.add('hover')" ondragleave="this.classList.remove('hover')">
+						<div id="touchbar_{{ groupID }}_dropzone{{ i }}_preview" ondragover="this.classList.add('hover')" ondragleave="this.classList.remove('hover')">
 							{%
 
 								if result then
@@ -26,277 +26,27 @@
 								end
 							%}
 						</div>
-						<input id="touchbar_{{ groupID }}_button{{ i }}_icon" type="file" accept="image/png, image/gif, image/jpeg, image/tiff" />
+						<input id="touchbar_{{ groupID }}_button{{ i }}_icon" type="file" accept="image/png, image/gif, image/jpeg, image/tiff" onchange="changeTouchBarDropZone('{{ groupID }}', '{{ i }}', this)" onclick="pressTouchBarDropZone('{{ groupID }}', '{{ i }}')" />
 					</div>
 				</td>
 				<td class="tbRowAction">
 					<input type="text" id="touchbar_{{ groupID }}_button{{ i }}_action" class="tbActionTextbox" value="{{ tb.getActionTitle(tostring(i), groupID) or "None" }}" disabled>
 				</td>
 				<td class="tbRowActionButton">
-					<a id="touchbar_{{ groupID }}_button{{ i }}_actionButton" href="#" class="button tbActionButton">Select</a>
-					<a id="touchbar_{{ groupID }}_button{{ i }}_clearActionButton" href="#" class="button tbActionButton">Clear</a>
+					<a id="touchbar_{{ groupID }}_button{{ i }}_actionButton" href="#" class="button tbActionButton" onclick="pressTouchBarActionButton('{{ groupID }}', '{{ i }}')">Select</a>
+					<a id="touchbar_{{ groupID }}_button{{ i }}_clearActionButton" href="#" class="button tbActionButton" onclick="pressTouchBarClearButton('{{ groupID }}', '{{ i }}')">Clear</a>
 				</td>
 				<td class="tbRowLabel">
-					<input type="text" id="touchbar_{{ groupID }}_button{{ i }}_label" class="tbButtonLabel" value="{{ tb.getLabel(tostring(i), groupID) or "None" }}">
+					<input type="text" id="touchbar_{{ groupID }}_button{{ i }}_label" class="tbButtonLabel" value="{{ tb.getLabel(tostring(i), groupID) or "None" }}" onchange="changeTouchBarLabel('{{ groupID }}', '{{ i }}', this.value)">
 				</td>
 				<td class="tbRowOrder">
 					{% if i ~= 1  then %}
-					<a id="touchbar_{{ groupID }}_button{{ i }}_upButton" href="#" class="button tbActionButton tbUpButton">⬆</a>
+					<a id="touchbar_{{ groupID }}_button{{ i }}_upButton" href="#" class="button tbActionButton" onclick="pressTouchBarUpButton('{{ groupID }}', '{{ i }}')">⬆</a>
 					{% end
 					if i ~= maxItems then %}
-					<a id="touchbar_{{ groupID }}_button{{ i }}_downButton" href="#" class="button tbActionButton">⬇</a>
+					<a id="touchbar_{{ groupID }}_button{{ i }}_downButton" href="#" class="button tbActionButton" onclick="pressTouchBarDownButton('{{ groupID }}', '{{ i }}')">⬇</a>
 					{% end %}
 				</td>
-				<script>
-						/*
-						--------------------------------------------------------------------------------
-						UP BUTTON:
-						--------------------------------------------------------------------------------
-						*/
-						{% if i ~= 1  then %}
-							var {{ groupID }}_button{{ i }}_upButton;
-							touchbar_{{ groupID }}_button{{ i }}_upButton = document.getElementById("touchbar_{{ groupID }}_button{{ i }}_upButton");
-							touchbar_{{ groupID }}_button{{ i }}_upButton.addEventListener("click", upButtonPressed{{ i }}, false);
-
-							function upButtonPressed{{ i }}(e) {
-								try {
-									var result = {
-										id: "touchBarPanelCallback",
-										params: {
-											type: "upButtonPressed",
-											groupID: "{{ groupID }}",
-											buttonID: "{{ i }}",
-										},
-									}
-									webkit.messageHandlers.{{ webviewLabel }}.postMessage(result);
-								} catch(err) {
-									console.log("Error: " + err)
-									alert('An error has occurred. Does the controller exist yet?');
-								}
-							}
-						/*
-						--------------------------------------------------------------------------------
-						DOWN BUTTON:
-						--------------------------------------------------------------------------------
-						*/
-						{% end
-						if i ~= maxItems then %}
-							var {{ groupID }}_button{{ i }}_downButton;
-							touchbar_{{ groupID }}_button{{ i }}_downButton = document.getElementById("touchbar_{{ groupID }}_button{{ i }}_downButton");
-							touchbar_{{ groupID }}_button{{ i }}_downButton.addEventListener("click", downButtonPressed{{ i }}, false);
-
-							function downButtonPressed{{ i }}(e) {
-								try {
-									var result = {
-										id: "touchBarPanelCallback",
-										params: {
-											type: "downButtonPressed",
-											groupID: "{{ groupID }}",
-											buttonID: "{{ i }}",
-										},
-									}
-									webkit.messageHandlers.{{ webviewLabel }}.postMessage(result);
-								} catch(err) {
-									console.log("Error: " + err)
-									alert('An error has occurred. Does the controller exist yet?');
-								}
-							}
-						{% end %}
-
-						/*
-						--------------------------------------------------------------------------------
-						LABEL:
-						--------------------------------------------------------------------------------
-						*/
-
-						var {{ groupID }}_button{{ i }}_label;
-						touchbar_{{ groupID }}_button{{ i }}_label = document.getElementById("touchbar_{{ groupID }}_button{{ i }}_label");
-						touchbar_{{ groupID }}_button{{ i }}_label.addEventListener("change", updateLabel{{ i }}, false);
-
-						function updateLabel{{ i }}(e) {
-							//
-							// Label Callback:
-							//
-							try {
-								var result = {
-									id: "touchBarPanelCallback",
-									params: {
-										type: "updateLabel",
-										groupID: "{{ groupID }}",
-										buttonID: "{{ i }}",
-										label: touchbar_{{ groupID }}_button{{ i }}_label.value,
-									},
-								}
-								webkit.messageHandlers.{{ webviewLabel }}.postMessage(result);
-							} catch(err) {
-								console.log("Error: " + err)
-								alert('An error has occurred. Does the controller exist yet?');
-							}
-						}
-
-						/*
-						--------------------------------------------------------------------------------
-						ICON DROP ZONE:
-						--------------------------------------------------------------------------------
-						*/
-
-						var {{ groupID }}_dropzone{{ i }};
-						touchbar_{{ groupID }}_dropzone{{ i }} = document.getElementById("touchbar_{{ groupID }}_dropzone{{ i }}");
-						touchbar_{{ groupID }}_dropzone{{ i }}.addEventListener("dragover", dragover{{ i }}, false);
-						touchbar_{{ groupID }}_dropzone{{ i }}.addEventListener("dragleave", dragleave{{ i }}, false);
-
-						var {{ groupID }}_dropzoneInput{{ i }};
-						touchbar_{{ groupID }}_dropzoneInput{{ i }} = document.getElementById("touchbar_{{ groupID }}_button{{ i }}_icon");
-						touchbar_{{ groupID }}_dropzoneInput{{ i }}.addEventListener("change", dropzoneChange{{ i }}, false);
-						touchbar_{{ groupID }}_dropzoneInput{{ i }}.addEventListener("click", dropzoneClick{{ i }}, false);
-
-						function dropzoneClick{{ i }}(e) {
-							//
-							// Drop Zone Clicked
-							//
-							try {
-								var result = {
-									id: "touchBarPanelCallback",
-									params: {
-										type: "iconClicked",
-										groupID: "{{ groupID }}",
-										buttonID: "{{ i }}",
-									},
-								}
-								webkit.messageHandlers.{{ webviewLabel }}.postMessage(result);
-							} catch(err) {
-								console.log("Error: " + err)
-								alert('An error has occurred. Does the controller exist yet?');
-							}
-						}
-
-						function dragover{{ i }}(e) {
-							touchbar_{{ groupID }}_dropzone{{ i }}.classList.add("hover");
-						}
-
-						function dragleave{{ i }}(e) {
-							touchbar_{{ groupID }}_dropzone{{ i }}.classList.remove("hover");
-						}
-
-						function dropzoneChange{{ i }}(e) {
-
-							var file = this.files[0];
-
-							touchbar_{{ groupID }}_dropzone{{ i }}.classList.remove("hover");
-
-							var match = this.accept.split(/, ?/).indexOf(file.type);
-
-							if (this.accept && match == -1) {
-								//
-								// File type dropped doesn't match the accepted list:
-								//
-								try {
-									var result = {
-										id: "touchBarPanelCallback",
-										params: {
-											type: "badExtension",
-										},
-									}
-									webkit.messageHandlers.{{ webviewLabel }}.postMessage(result);
-								} catch(err) {
-									console.log("Error: " + err)
-									alert('An error has occurred. Does the controller exist yet?');
-								}
-								return;
-							};
-
-							touchbar_{{ groupID }}_dropzone{{ i }}.classList.add("dropped");
-
-							var reader = new FileReader(file);
-							reader.readAsDataURL(file);
-
-							reader.onload = function(e) {
-								var data = e.target.result;
-								document.getElementById("touchbar_{{ groupID }}_dropzone{{ i }}_preview").innerHTML = '<img src="' + data + '" />';
-
-								//
-								// Icon Callback:
-								//
-								try {
-									var result = {
-										id: "touchBarPanelCallback",
-										params: {
-											type: "updateIcon",
-											groupID: "{{ groupID }}",
-											buttonID: "{{ i }}",
-											icon: data,
-										},
-									}
-									webkit.messageHandlers.{{ webviewLabel }}.postMessage(result);
-								} catch(err) {
-									console.log("Error: " + err)
-									alert('An error has occurred. Does the controller exist yet?');
-								}
-
-							};
-						}
-
-						/*
-						--------------------------------------------------------------------------------
-						ACTION:
-						--------------------------------------------------------------------------------
-						*/
-
-						var {{ groupID }}_button{{ i }}_actionButton;
-						touchbar_{{ groupID }}_button{{ i }}_actionButton = document.getElementById("touchbar_{{ groupID }}_button{{ i }}_actionButton");
-						touchbar_{{ groupID }}_button{{ i }}_actionButton.addEventListener("click", updateAction{{ i }}, false);
-
-						function updateAction{{ i }}(e) {
-							//
-							// Action Callback:
-							//
-							try {
-								var result = {
-									id: "touchBarPanelCallback",
-									params: {
-										type: "updateAction",
-										groupID: "{{ groupID }}",
-										buttonID: "{{ i }}",
-									},
-								}
-								webkit.messageHandlers.{{ webviewLabel }}.postMessage(result);
-							} catch(err) {
-								console.log("Error: " + err)
-								alert('An error has occurred. Does the controller exist yet?');
-							}
-						}
-
-						/*
-						--------------------------------------------------------------------------------
-						CLEAR:
-						--------------------------------------------------------------------------------
-						*/
-
-						var {{ groupID }}_button{{ i }}_clearActionButton;
-						touchbar_{{ groupID }}_button{{ i }}_clearActionButton = document.getElementById("touchbar_{{ groupID }}_button{{ i }}_clearActionButton");
-						touchbar_{{ groupID }}_button{{ i }}_clearActionButton.addEventListener("click", clearAction{{ i }}, false);
-
-						function clearAction{{ i }}(e) {
-							//
-							// Action Callback:
-							//
-							try {
-								var result = {
-									id: "touchBarPanelCallback",
-									params: {
-										type: "clearAction",
-										groupID: "{{ groupID }}",
-										buttonID: "{{ i }}",
-									},
-								}
-								webkit.messageHandlers.{{ webviewLabel }}.postMessage(result);
-							} catch(err) {
-								console.log("Error: " + err)
-								alert('An error has occurred. Does the controller exist yet?');
-							}
-						}
-
-				</script>
 			</tr>
 {%
 	end
