--- a/src/plugins/core/preferences/manager/html/panels.html
+++ b/src/plugins/core/preferences/manager/html/panels.html
@@ -3,14 +3,22 @@
 	<head>
 		<style>{(css/preferences.css)}</style>
 		<script>{(js/list.js)}</script>
-		{% if not debugMode then %}
 		<script>
-			// Disable Right Clicking:
-			document.addEventListener("contextmenu", function(e){
-			    e.preventDefault();
-			}, false);
+			{% if not debugMode then %}
+				// Disable Right Clicking:
+				document.addEventListener("contextmenu", function(e){
+					e.preventDefault();
+				}, false);
+			{% end %}
+
+			function alertErrorMessage(err) {
+				alert('An error has occurred communicating between the Webview Javascript & CommandPost: ' + err);
+			}
+
+			function postMessage(result) {
+				webkit.messageHandlers.{{ webviewLabel }}.postMessage(result)
+			}
 		</script>
-		{% end %}
 	</head>
 	<body>
 {%	for i, panel in ipairs(panels) do %}
