--- a/src/plugins/core/preferences/panels/plugins/html/panel.html
+++ b/src/plugins/core/preferences/panels/plugins/html/panel.html
@@ -1,4 +1,20 @@
 <style>{(css/plugins.css)}</style>
+<script>
+	function pressPluginAction(pluginID, action) {
+		try {
+			var result = {
+				id: "pluginsPanelCallback",
+				params: {
+					pluginID: pluginID,
+					action: action,
+				},
+			}
+			postMessage(result);
+		} catch(err) {
+			alertErrorMessage(err);
+		}
+	}
+</script>
 <h3 class="uiItem">{{ i18n "pluginsManagerLabel" }}</h3>
 <table class="plugins">
 	<thead>
@@ -15,7 +31,7 @@
 			<td class="rowCategory">{{ plugin.currentCategory }}</td>
 			<td class="rowName">{* plugin.shortName *}</td>
 			<td class="rowStatus">{* plugin.status *}</td>
-			<td class="rowOption">{% if plugin.action then %}<a id="{{ plugin.id }}" data-action="{{ plugin.action }}" href="#">{{ plugin.actionLabel }}</a>{% else %}<i>{{ i18n("pluginRequired") }}</i>{% end %}</td>
+			<td class="rowOption">{% if plugin.action then %}<a id="{{ plugin.id }}" href="#" onclick="pressPluginAction('{{ plugin.id }}', '{{ plugin.action }}')">{{ plugin.actionLabel }}</a>{% else %}<i>{{ i18n("pluginRequired") }}</i>{% end %}</td>
 		</tr>
 	{% end %}
 	</tbody>
