--- a/src/plugins/core/midi/prefs/html/controls.html
+++ b/src/plugins/core/midi/prefs/html/controls.html
@@ -2,6 +2,12 @@
 {%	for __, groupID in pairs(groups) do
 		if groupID == defaultGroup then %}
 	<div id="midiGroup_{{ groupID }}" class="midiGroup{{ groupID == defaultGroup and ' selected' or '' }}">
+		<script>
+			window.onload = function() {
+				{% local scrollBarValue = scrollBarPosition[groupID] or 0 %}
+				document.getElementsByClassName("midi")[0].getElementsByTagName("tbody")[0].scrollTop = {{ scrollBarValue }};
+			};
+		</script>
 		<table class="midi">
 			<thead>
 				<tr>
@@ -15,7 +21,7 @@
 					<th class="midiRowLearn"></th>
 				</tr>
 			</thead>
-			<tbody>
+			<tbody onscroll="saveScrollbarPosition('{{ groupID }}', this);">
 				{(html/rows.html, _.extend({groupID = groupID}, context))}
 			</tbody>
 		</table>
