--- a/src/plugins/core/touchbar/prefs/html/panel.html
+++ b/src/plugins/core/touchbar/prefs/html/panel.html
@@ -184,6 +184,40 @@
 		}
 	}
 
+	function changeTouchBarBankLabel(groupID, label) {
+		try {
+			var result = {
+				id: "touchBarPanelCallback",
+				params: {
+					type: "updateBankLabel",
+					groupID: groupID,
+					label: label,
+				},
+			}
+			postMessage(result);
+		} catch(err) {
+			alertErrorMessage(err);
+		}
+	}
+
+	function saveScrollbarPosition(groupID, element) {
+		if (element.scrollTop >= 0 && element.scrollTop <= element.scrollHeight) {
+			try {
+				var result = {
+					id: "touchBarPanelCallback",
+					params: {
+						type: "scrollBarPosition",
+						groupID: groupID,
+						value: element.scrollTop,
+					},
+				}
+				postMessage(result);
+			} catch(err) {
+				alertErrorMessage(err);
+			}
+		}
+	}
+
 </script>
 <h3 class="uiItem"><span class="touchBarGroupSelect"><span style="font-weight:normal; font-size:13px;">{{ i18n("application") }}: </span>{* touchBarGroupSelect *}</span>{{ i18n("layoutEditor") }}</h3>
 {(html/controls.html, context)}
