--- a/src/plugins/finalcutpro/hud/panels/buttons/html/panel.html
+++ b/src/plugins/finalcutpro/hud/panels/buttons/html/panel.html
@@ -27,13 +27,28 @@
 <div id="hudButtons">
 	<table>
 		<tr>
-			<th><a id="button1" href="#" class="button">Button 1</a></th>
+			<th><a id="button1" href="#" class="button" oncontextmenu="window.alert('test');return false;">Button 1</a></th>
 			<th><a id="button2" href="#" class="button">Button 2</a></th>
 		<tr>
 		<tr style="padding:80px;"><th></th></tr>
 		<tr>
 			<th><a id="button3" href="#" class="button">Button 3</a></th>
 			<th><a id="button4" href="#" class="button">Button 4</a></th>
+		</tr>
+		<tr style="padding:80px;"><th></th></tr>
+		<tr>
+			<th><a id="button5" href="#" class="button">Button 5</a></th>
+			<th><a id="button6" href="#" class="button">Button 6</a></th>
+		</tr>
+		<tr style="padding:80px;"><th></th></tr>
+		<tr>
+			<th><a id="button7" href="#" class="button">Button 7</a></th>
+			<th><a id="button8" href="#" class="button">Button 8</a></th>
+		</tr>
+		<tr style="padding:80px;"><th></th></tr>
+		<tr>
+			<th><a id="button9" href="#" class="button">Button 9</a></th>
+			<th><a id="button10" href="#" class="button">Button 10</a></th>
 		</tr>
 	</table>
 </div>
