--- a/src/plugins/finalcutpro/hud/panels/tenbuttons/html/panel.html
+++ b/src/plugins/finalcutpro/hud/panels/tenbuttons/html/panel.html
@@ -55,8 +55,8 @@
 		}
 	}
 
-	function renamePrompt(buttonID){
-		var value = prompt("What would you like to rename this button to?");
+	function renamePrompt(buttonID, message, value){
+		var value = prompt(message, value);
 		if (value == null || value == "") {
 			// Cancelled
 		} else {
@@ -76,31 +76,30 @@
 		}
 	}
 </script>
-<div id="hudButtons">
-	<table>
-		<tr>
-			<th><a id="button1" href="#" class="button" onclick="leftClickHUDButton('1')" oncontextmenu="rightClickHUDButton('1'); return false;">Unassigned</a></th>
-			<th><a id="button2" href="#" class="button" onclick="leftClickHUDButton('2')" oncontextmenu="rightClickHUDButton('2'); return false;">Unassigned</a></th>
-		<tr>
-		<tr style="padding:80px;"><th></th></tr>
-		<tr>
-			<th><a id="button3" href="#" class="button" onclick="leftClickHUDButton('3')" oncontextmenu="rightClickHUDButton('3'); return false;">Unassigned</a></th>
-			<th><a id="button4" href="#" class="button" onclick="leftClickHUDButton('4')" oncontextmenu="rightClickHUDButton('4'); return false;">Unassigned</a></th>
-		</tr>
-		<tr style="padding:80px;"><th></th></tr>
-		<tr>
-			<th><a id="button5" href="#" class="button" onclick="leftClickHUDButton('5')" oncontextmenu="rightClickHUDButton('5'); return false;">Unassigned</a></th>
-			<th><a id="button6" href="#" class="button" onclick="leftClickHUDButton('6')" oncontextmenu="rightClickHUDButton('6'); return false;">Unassigned</a></th>
-		</tr>
-		<tr style="padding:80px;"><th></th></tr>
-		<tr>
-			<th><a id="button7" href="#" class="button" onclick="leftClickHUDButton('7')" oncontextmenu="rightClickHUDButton('7'); return false;">Unassigned</a></th>
-			<th><a id="button8" href="#" class="button" onclick="leftClickHUDButton('8')" oncontextmenu="rightClickHUDButton('8'); return false;">Unassigned</a></th>
-		</tr>
-		<tr style="padding:80px;"><th></th></tr>
-		<tr>
-			<th><a id="button9" href="#" class="button" onclick="leftClickHUDButton('9')" oncontextmenu="rightClickHUDButton('9'); return false;">Unassigned</a></th>
-			<th><a id="button10" href="#" class="button" onclick="leftClickHUDButton('10')" oncontextmenu="rightClickHUDButton('10'); return false;">Unassigned</a></th>
-		</tr>
-	</table>
-</div>
+
+<table>
+	<tr>
+		<th><a id="button1" href="#" class="button" onclick="leftClickHUDButton('1')" oncontextmenu="rightClickHUDButton('1'); return false;">-</a></th>
+		<th><a id="button2" href="#" class="button" onclick="leftClickHUDButton('2')" oncontextmenu="rightClickHUDButton('2'); return false;">-</a></th>
+	<tr>
+	<tr style="padding:80px;"><th></th></tr>
+	<tr>
+		<th><a id="button3" href="#" class="button" onclick="leftClickHUDButton('3')" oncontextmenu="rightClickHUDButton('3'); return false;">-</a></th>
+		<th><a id="button4" href="#" class="button" onclick="leftClickHUDButton('4')" oncontextmenu="rightClickHUDButton('4'); return false;">-</a></th>
+	</tr>
+	<tr style="padding:80px;"><th></th></tr>
+	<tr>
+		<th><a id="button5" href="#" class="button" onclick="leftClickHUDButton('5')" oncontextmenu="rightClickHUDButton('5'); return false;">-</a></th>
+		<th><a id="button6" href="#" class="button" onclick="leftClickHUDButton('6')" oncontextmenu="rightClickHUDButton('6'); return false;">-</a></th>
+	</tr>
+	<tr style="padding:80px;"><th></th></tr>
+	<tr>
+		<th><a id="button7" href="#" class="button" onclick="leftClickHUDButton('7')" oncontextmenu="rightClickHUDButton('7'); return false;">-</a></th>
+		<th><a id="button8" href="#" class="button" onclick="leftClickHUDButton('8')" oncontextmenu="rightClickHUDButton('8'); return false;">-</a></th>
+	</tr>
+	<tr style="padding:80px;"><th></th></tr>
+	<tr>
+		<th><a id="button9" href="#" class="button" onclick="leftClickHUDButton('9')" oncontextmenu="rightClickHUDButton('9'); return false;">-</a></th>
+		<th><a id="button10" href="#" class="button" onclick="leftClickHUDButton('10')" oncontextmenu="rightClickHUDButton('10'); return false;">-</a></th>
+	</tr>
+</table>
