--- a/src/plugins/finalcutpro/hud/panels/fcpxml/html/panel.html
+++ b/src/plugins/finalcutpro/hud/panels/fcpxml/html/panel.html
@@ -2,7 +2,7 @@
 	.button {
 		text-align: center;
 		display:block;
-		width: 200px;
+		width: 150px;
 		font-family: -apple-system;
 		font-size: 12px;
 		text-decoration: none;
@@ -47,7 +47,7 @@
 		color: transparent;
 	    text-shadow: 0px 0px 0px tomato;
 	}
-	#codeForm {
+	.CodeMirror {
 		width: 580px;
 	}
 	#shortcutKeys {
@@ -61,33 +61,18 @@
 
 <style>{(js/addon/scroll/simplescrollbars.css)}</style>
 <script>{(js/addon/scroll/simplescrollbars.js)}</script>
+<script>{(js/addon/scroll/annotatescrollbar.js)}</script>
 
 <style>{(js/addon/dialog/dialog.css)}</style>
+<script>{(js/addon/dialog/dialog.js)}</script>
+
 <style>{(js/addon/search/matchesonscrollbar.css)}</style>
 
-<script>{(js/addon/dialog/dialog.js)}</script>
 <script>{(js/addon/search/searchcursor.js)}</script>
 <script>{(js/addon/search/search.js)}</script>
 <script>{(js/addon/search/matchesonscrollbar.js)}</script>
 <script>{(js/addon/search/jump-to-line.js)}</script>
 
-<script>
-	function dropboxAction(){
-		try {
-			var result = {
-				id: "fcpxmlHUD",
-				params: {
-					type: "dropbox",
-					value: document.getElementById("dropbox").value,
-				},
-			}
-			postMessage(result);
-		} catch(err) {
-			alertErrorMessage(err);
-		}
-		document.getElementById("dropbox").value = "";
-	}
-</script>
 <table>
 	<tr>
 		<th style="width: 100%;">
@@ -109,6 +94,7 @@
 			<script>
 				var editor = CodeMirror.fromTextArea(document.getElementById("code"), {
 					mode: "xml",
+					dragDrop: false,
 					lineNumbers: true,
 					scrollbarStyle: "simple",
         		});
@@ -129,21 +115,49 @@
 				});
 
         		function setCode(value){
-        			editor.setValue(atob(value));
+        			if (editor != null) {
+		        		editor.setValue(atob(value));
+		        	}
         		}
 
 				function sendToFCP(){
-					try {
-						var result = {
-							id: "fcpxmlHUD",
-							params: {
-								type: "sendToFCP",
-								value: editor.getValue(),
-							},
+					if (editor != null) {
+						try {
+							var result = {
+								id: "fcpxmlHUD",
+								params: {
+									type: "sendToFCP",
+									value: editor.getValue(),
+								},
+							}
+							postMessage(result);
+						} catch(err) {
+							alertErrorMessage(err);
 						}
-						postMessage(result);
-					} catch(err) {
-						alertErrorMessage(err);
+					}
+				}
+
+				function clearEditor(){
+					if (editor != null) {
+						editor.setValue("");
+					}
+				}
+
+				function dropboxAction(){
+					if (document.getElementById("dropbox") != null) {
+						try {
+							var result = {
+								id: "fcpxmlHUD",
+								params: {
+									type: "dropbox",
+									value: document.getElementById("dropbox").value,
+								},
+							}
+							postMessage(result);
+						} catch(err) {
+							alertErrorMessage(err);
+						}
+						document.getElementById("dropbox").value = "";
 					}
 				}
 			</script>
@@ -151,7 +165,8 @@
 	</tr>
 	<tr>
 		<th style="width: 100%; padding-top: 10px;">
-			<a id="sendToFCP" href="#" class="button" onclick="sendToFCP()">{{ i18n("sendToFinalCutPro") }}</a>
+			<a id="sendToFCP" href="#" class="button" onclick="sendToFCP()" style="margin-right: 15px">{{ i18n("sendToFinalCutPro") }}</a>
+			<a id="clearEditor" href="#" class="button" onclick="clearEditor()">{{ i18n("clear") }}</a>
 		</th>
 	</tr>
 	<tr>
