--- a/src/plugins/core/preferences/manager/html/panels.html
+++ b/src/plugins/core/preferences/manager/html/panels.html
@@ -18,6 +18,24 @@
 			function postMessage(result) {
 				webkit.messageHandlers.{{ webviewLabel }}.postMessage(result)
 			}
+
+			function changeInnerHTMLByID(id, value) {
+				if (document.getElementById(id) !== null) {
+					document.getElementById(id).innerHTML = value;
+				}
+			}
+
+			function changeClassNameByID(id, className) {
+				if (document.getElementById(id) !== null) {
+					document.getElementById(id).className = className;
+				}
+			}
+
+			function changeCheckedByID(id, value) {
+				if (document.getElementById(id) !== null) {
+					document.getElementById(id).checked = value;
+				}
+			}
 		</script>
 	</head>
 	<body>
